name:                hslogger-reader
version:             1.0.0
synopsis:            Parsing hslogger-produced logs.
description:         
  hslogger-reader provides a function to generate a parser for
  <http://hackage.haskell.org/package/hslogger hslogger>-produced logs
  from a hslogger format string (see "System.Log.Formatter"). The
  accompanying executable demonstrates parsing and computing with a
  log file in constant memory.
license:             BSD3
license-file:        LICENSE
author:              Alex Bates
maintainer:          ard.bates@gmail.com
build-type:          Simple
homepage:            http://github.com/prophet-on-that/hslogger-reader
bug-reports:         http://github.com/prophet-on-that/hslogger-reader/issues
cabal-version:       >=1.10
category: Interfaces, Parsing

library 
  exposed-modules:
      System.Log.Reader
  hs-source-dirs:      
    src
  default-language:    
    Haskell2010
  build-depends:       
      base >= 4.7 && < 5
    , attoparsec == 0.12.*
    , text == 1.2.*
    , hslogger == 1.2.*
    , time == 1.4.*
    , old-locale 
  ghc-options: -W

executable profiling
  hs-source-dirs: src-exe/profiling
  main-is: 
      Main.hs
  build-depends:
      base
    , hslogger-reader
    , text
    , attoparsec
  default-language: Haskell2010
  ghc-options: -W